--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -26,13 +26,14 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
                 android:text="00/00"
-                android:textColor="#666666" />
+                android:textColor="#666666"
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/txtCommName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="55dp"
+                android:layout_marginLeft="45dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="3dp"
                 android:text="Comunidad 1"
@@ -44,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtCommName"
-                android:layout_marginLeft="55dp"
+                android:layout_marginLeft="45dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="2dp"
                 android:text="TextView"
@@ -57,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtEventName"
                 android:layout_marginBottom="3dp"
-                android:layout_marginLeft="55dp"
+                android:layout_marginLeft="45dp"
                 android:layout_marginTop="2dp"
                 android:text="15:00 - 20:00"
                 android:textColor="#666666"
