--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -1,32 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    tools:context="elcarmen.project.community.Business.FavoritesActivity">
+    tools:context="Business.FavoritesActivity">
 
-    <ScrollView
+    <RelativeLayout
+        android:id="@+id/rlFavorites"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ListView
+            android:id="@+id/lvFavorites"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent" />
+    </RelativeLayout>
 
-            <Button
-                android:id="@+id/btnPrueba"
-                android:layout_width="103dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="130dp"
-                android:layout_weight="1"
-                android:text="Button"
-                android:onClick="pruebaClicked"
-                tools:layout_editor_absoluteX="78dp"
-                tools:layout_editor_absoluteY="142dp" />
-
-        </LinearLayout>
-    </ScrollView>
-
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
