--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -105,6 +105,16 @@
                 android:textSize="12sp" />
 
             <Button
+                android:id="@+id/btn_Favorito"
+                android:layout_width="30dp"
+                android:layout_height="24dp"
+                android:layout_centerVertical="true"
+                android:layout_gravity="bottom|end"
+                android:layout_toStartOf="@+id/btn_EliminarNew"
+                android:background="@drawable/ic_star_border_black_24dp"
+                android:textSize="12sp" />
+
+            <Button
                 android:id="@+id/btn_NewMore"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
