--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -72,7 +72,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/edt_tel1User"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
                     android:ems="10"
@@ -102,8 +101,7 @@
                     android:layout_marginTop="10dp"
                     android:ems="10"
                     android:hint="Direccion"
-                    android:inputType="textMultiLine|textPostalAddress"
-                    android:textAlignment="textStart" />
+                    android:inputType="textMultiLine|textPostalAddress" />
 
                 <ImageView
                     android:id="@+id/imageView5"
