--- a/app/src/main/res/layout/activity_event_info.xml
+++ b/app/src/main/res/layout/activity_event_info.xml
@@ -35,6 +35,15 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/txtEventInfoTerminado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Terminado"
+                android:textColor="@android:color/holo_red_dark"
+                android:textStyle="italic" />
+
+            <TextView
                 android:id="@+id/textView20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
