--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -63,6 +63,18 @@
                 android:text="15:00 - 20:00"
                 android:textColor="#666666"
                 android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/txtEventTerminado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/txtEventName"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="1dp"
+                android:text="Terminado"
+                android:textColor="@android:color/holo_red_dark"
+                android:textStyle="italic" />
         </RelativeLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
