--- a/app/src/main/res/layout/fragment_communities.xml
+++ b/app/src/main/res/layout/fragment_communities.xml
@@ -14,7 +14,9 @@
         <ListView
             android:id="@+id/lvCommunities"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:longClickable="true" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/ftbtnCreateCommunity"
