--- a/app/src/main/res/layout/notifications_list_item.xml
+++ b/app/src/main/res/layout/notifications_list_item.xml
@@ -1,38 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        android:background="@color/colorPrimaryLight">
+        android:orientation="horizontal">
 
 
         <RelativeLayout
-            android:layout_width="100dp"
-            android:layout_height="90dp">
+            android:layout_width="140dp"
+            android:layout_height="77dp">
 
             <ImageView
                 android:id="@+id/imgNotif"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="116dp"
+                android:layout_height="61dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="5dp"
                 app:srcCompat="@drawable/img_comm_default" />
         </RelativeLayout>
 
 
-
         <RelativeLayout
-            android:layout_width="181dp"
-            android:layout_height="88dp">
+            android:layout_width="185dp"
+            android:layout_height="77dp">
 
             <TextView
                 android:id="@+id/txtDescriptionNotif"
@@ -44,7 +41,7 @@
                 android:layout_marginTop="11dp"
                 android:text="Description"
                 android:textColor="@color/colorPrimary"
-                android:textSize="17sp"
+                android:textSize="13sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -54,7 +51,7 @@
 
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginBottom="22dp"
+                android:layout_marginBottom="18dp"
                 android:text="Title"
                 android:textColor="@color/colorPrimary"
                 android:textSize="17sp"
@@ -63,32 +60,19 @@
 
 
         <RelativeLayout
-            android:layout_width="100dp"
-            android:layout_height="90dp">
+            android:layout_width="60dp"
+            android:layout_height="77dp">
 
             <Button
                 android:id="@+id/btnDeleteNotif"
-                android:layout_width="wrap_content"
+                android:layout_width="41dp"
                 android:layout_height="30dp"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginBottom="11dp"
-                android:background="@drawable/rounded_borders_default_button"
-                android:text="Eliminar"
+                android:layout_centerVertical="true"
+                android:background="@drawable/ic_delete_forever_black_24dp"
                 android:textColor="@color/white"
                 android:textSize="12sp" />
 
-            <Button
-                android:id="@+id/btnMoreNotif"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="11dp"
-                android:background="@drawable/rounded_borders_default_button"
-                android:text="Ver más"
-                android:textColor="@color/white"
-                android:textSize="12sp" />
         </RelativeLayout>
 
     </LinearLayout>
